--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,14 +6,58 @@ require: rubocop-rspec
 
 # === Configuration ===
 
+# --- All Cops ---
+
+AllCops:
+  TargetRubyVersion: 2.3
+
+# -- Bundler ---
+
+Bundler/OrderedGems:
+  Description: 'Gems should be alphabetically sorted within groups.'
+  Enabled: false
+
+# --- Gemspec ---
+
+Gemspec/OrderedDependencies:
+  Description: 'Dependencies in the gemspec should be alphabetically sorted.'
+  Enabled: false
+
 # --- Linting ---
+
+Lint/ScriptPermission:
+  Description: 'Grant script file execute permission.'
+  Enabled: false
 
 Lint/UnusedBlockArgument:
   Description: 'Checks for unused block arguments.'
   StyleGuide: 'https://github.com/bbatsov/ruby-style-guide#underscore-unused-vars'
   Enabled: false
 
+# --- Layout ---
+
+Layout/CommentIndentation:
+  Description: 'Indentation of comments.'
+  Enabled: false
+
+Layout/ExtraSpacing:
+  Description: 'This cop checks for extra/unnecessary whitespaces.'
+  Exclude:
+    - Guardfile
+
+Layout/TrailingBlankLines:
+  Description: 'Checks trailing blank lines and final newline.'
+  StyleGuide: 'https://github.com/bbatsov/ruby-style-guide#newline-eof'
+  Enabled: false
+
 # --- Metrics ---
+
+Metrics/BlockLength:
+  Description: 'Avoid long blocks with many lines.'
+  Exclude:
+    - 'Rakefile'
+    - '**/*.rake'
+    - 'spec/**/*.rb'
 
 Metrics/LineLength:
   Description: 'Limit lines to 120 characters with 10 characters as buffer.'
@@ -26,16 +70,13 @@ Style/AsciiComments:
   StyleGuide: 'https://github.com/bbatsov/ruby-style-guide#english-comments'
   Enabled: false
 
-Style/CommentIndentation:
-  Description: 'Indentation of comments.'
+# --- RSpec---
+
+RSpec/EmptyLineAfterExampleGroup:
+  Description: 'Checks if there is an empty line after example group blocks.'
   Enabled: false
 
-Style/ExtraSpacing:
-  Description: 'This cop checks for extra/unnecessary whitespaces.'
-  Exclude:
-    - Guardfile
-
-Style/TrailingBlankLines:
-  Description: 'Checks trailing blank lines and final newline.'
-  StyleGuide: 'https://github.com/bbatsov/ruby-style-guide#newline-eof'
-  Enabled: false
+RSpec/MultipleExpectations:
+  Description: 'Checks if examples contain too many `expect` calls.'
+  Enabled: true
+  Max: 4
